axum-myroutes/tests/ui/fail_route_invalid_path.stderr
error: empty parameter name not allowed
  --> tests/ui/fail_route_invalid_path.rs:13:11
   |
13 |     #[get("/{}", handler = _handler)]
   |           ^^^^^
